# fact-checker-mcp

./: .coverage  .env.example  .gitignore  AUTOMATOR_README.md  CLAUDE.md  README.md  debug_automator.sh  fact-checker.py  fact_check_automator.sh  fc_script-nog-uitwerken.md  install_automator.sh  manual_install.md  pyproject.toml  requirements.txt  simple_fact_checker_test.py  smart_search_tool.py  test_markdown_format.py  test_path_handling.py  web_ui.py
FactChecker.workflow/Contents/: Info.plist  document.wflow
tests/: conftest.py  test_history.py  test_markdown_export.py  test_timestamp.py
