[project]
name = "fact-checker-mcp"
version = "2.0.0"
description = "Hybrid CrewAI + MCP Fact Checker Server"
authors = [
    {name = "Joop Snijder", email = "joop@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core MCP dependencies
    "fastmcp>=2.11.0",
    "mcp>=1.12.0",
    
    # CrewAI and AI dependencies - minimal set for now
    "crewai>=0.157.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.30",
    "langchain-core>=0.3.74",
    
    # LLM and OpenAI 
    "openai>=1.99.0",
    "tiktoken>=0.11.0",
    
    # Web scraping and search
    "beautifulsoup4>=4.13.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    
    # Data models and validation  
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    
    # Vector database and memory
    "chromadb>=1.0.0",
    
    # Utility libraries
    "rich>=14.0.0",
    "typer>=0.15.0",
    "tenacity>=9.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["fact-checker.py", "smart_search_tool.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "B"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=fact_checker"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.0",
    "pytest>=8.3.0", 
    "pytest-cov>=6.1.0",
]